<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.simplebutton.MainActivity"
    android:background="@drawable/supbg">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up1"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/tv_sup"
        android:textColor="#1a8cff"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="25sp"
        android:layout_below="@+id/tv_sup"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_fn"
        android:background="@drawable/border"
        android:gravity="center"/>
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="25sp"
        android:layout_below="@+id/tv_sup"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="200dp"
        android:id="@+id/tv_ln"
        android:background="@drawable/border"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_mail1"
        android:textSize="25sp"
        android:layout_below="@+id/tv_fn"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_em"
        android:gravity="center"
        android:background="@drawable/border" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="25sp"
        android:layout_below="@+id/tv_em"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_cn1"
        android:gravity="center"
        android:background="@drawable/border"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="25sp"
        android:layout_below="@+id/tv_cn1"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_pw"
        android:gravity="center"
        android:background="@drawable/border"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="25sp"
        android:layout_below="@+id/tv_pw"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_cpw"
        android:gravity="center"
        android:background="@drawable/border"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:layout_below="@id/tv_cpw"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textSize="20sp"/>
</RelativeLayout>