<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.simplebutton.MainActivity"
    android:background="@drawable/actbg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ambit_cyber_tech"
        android:id="@+id/tv_act"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#00cc66"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:onClick="buttonresult"
        android:textAllCaps="false"
        android:id="@+id/bt_home"
        android:layout_marginTop="55dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:onClick="buttonresult"
        android:textAllCaps="false"
        android:id="@+id/bt_contacts"
        android:layout_marginTop="20dp"
        android:layout_below="@id/bt_home"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:onClick="buttonresult"
        android:textAllCaps="false"
        android:id="@+id/bt_signup"
        android:layout_marginTop="20dp"
        android:layout_below="@id/bt_contacts"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:onClick="buttonresult"
        android:textAllCaps="false"
        android:id="@+id/bt_signin"
        android:layout_marginTop="20dp"
       android:layout_below="@id/bt_signup"/>


</RelativeLayout>
