<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.simplebutton.MainActivity"
    android:background="@drawable/cnbg">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landline_040_235235"
        android:id="@+id/ll"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_9533731266"
        android:id="@+id/tv_mb"
        android:layout_below="@id/ll"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail_ambitcyber_gmail_com"
        android:layout_below="@id/tv_mb"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textColor="#000000"/>
</RelativeLayout>